# JUCE-Theme-Studio

./: .gitignore  JUCE_THEME_STUDIO_PLAN.md  README.md  diagnose_input_freeze.py
.github/workflows/: macos-build.yml
docs/superpowers/plans/: 2026-06-13-fully-managed-apply-mode.md
docs/superpowers/specs/: 2026-06-13-fully-managed-mode-design.md
juce_theme_studio/: .gitignore  README.md  __init__.py  pyproject.toml
juce_theme_studio/app/: diagnose_project.py  main.py
juce_theme_studio/core/: alignment.py  assets.py  auto_link.py  controls.py  image_ops.py  logging_config.py  managed_apply.py  manifest.py  mapping.py  project.py  snap.py  sprite_detect.py  sprite_slicer.py  sprites.py  theme_diff.py  types.py  undo.py  validation.py
juce_theme_studio/examples/juce_live_preview/: CMakeLists.txt  README.md
juce_theme_studio/examples/juce_live_preview/Source/: Main.cpp
juce_theme_studio/examples/mock_juce_project/: CMakeLists.txt  MockPlugin.jucer
juce_theme_studio/examples/mock_juce_project/Source/: MainComponent.cpp  MainComponent.h
juce_theme_studio/git_tools/: __init__.py  git.py
juce_theme_studio/gui/: canvas.py  canvas_items.py  guide_overlay.py  main_window.py
juce_theme_studio/gui/dialogs/: about_dialog.py  apply_preview_dialog.py  export_preview_dialog.py  help_dialog.py  link_asset_dialog.py  settings_dialog.py  sprite_import_dialog.py  theme_colors_dialog.py  theme_diff_dialog.py
juce_theme_studio/gui/panels/: export_panel.py  git_panel.py  layers_panel.py  live_preview_panel.py  log_panel.py  properties_panel.py  screen_panel.py
juce_theme_studio/gui/widgets/: asset_list.py
juce_theme_studio/juce/: __init__.py  exporter.py  preview_bridge.py  scanner.py  scanner_ast.py
juce_theme_studio/packaging/: README-MACOS.txt  build_macos_app.sh  macos_app.spec
juce_theme_studio/tests/: conftest.py  test_alignment.py  test_assets.py  test_auto_link.py  test_export.py  test_export_preview.py  test_git_tools.py  test_image_ops.py  test_import_project_assets.py  test_main_window.py  test_managed_apply.py  test_manifest.py  test_mapping.py  test_param_scan.py  test_preview_bridge.py  test_project.py  test_scanner.py  test_scanner_ast.py  test_snap.py  test_sprite_detect.py  test_sprite_slicer.py  test_sprites.py  test_theme_colors.py  test_theme_diff.py  test_undo.py  test_validation.py
tools/: diagnose_input_freeze.py
